@@ -1,10 +1,10 @@
 --- #YAML:1.0
 name: Graph-Easy
-version: 0.27
+version: 0.28
 version_from: lib/Graph/Easy.pm
 license: gpl
 distribution_type: module
-generated_by: Graph-Easy version 0.27
+generated_by: Graph-Easy version 0.28
 installdirs: site
 requires:
   Heap: 0.71
